# telegram-notifier-fastapi

./: Dockerfile  LICENSE  main.py  pyproject.toml
src/: bot.py  config.py  enums.py  main.py  messages.py  schemas.py
